[gd_scene load_steps=5 format=3 uid="uid://cx7sjqw5qw11t"]

[ext_resource type="Script" path="res://Game Elements/Enviroment/build_spot.gd" id="1_j5rbx"]
[ext_resource type="Texture2D" uid="uid://dhryf6ssycbgs" path="res://Art Assets/Enviroment/build_spot.png" id="2_bkho0"]
[ext_resource type="FontFile" uid="uid://uv86d3muhwsi" path="res://Game Elements/UI/Fonts/kongtext.ttf" id="2_whjxn"]

[sub_resource type="Theme" id="Theme_c2boh"]
default_font = ExtResource("2_whjxn")
default_font_size = 16

[node name="BuildSpot" type="Node2D"]
texture_filter = 1
script = ExtResource("1_j5rbx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("2_bkho0")

[node name="MenuButton" type="MenuButton" parent="."]
texture_filter = 1
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
theme = SubResource("Theme_c2boh")
item_count = 4
popup/item_0/text = "Snowfactory 90G [PHY]"
popup/item_0/id = 0
popup/item_1/text = "Frost Keep 110G [MAG]"
popup/item_1/id = 1
popup/item_2/text = "Coal Launcher 120G [PHY/SPLASH]"
popup/item_2/id = 2
popup/item_3/text = "Barracks 75G TBD"
popup/item_3/id = 3

[connection signal="mouse_entered" from="MenuButton" to="." method="_on_menu_button_mouse_entered"]
[connection signal="mouse_exited" from="MenuButton" to="." method="_on_menu_button_mouse_exited"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
